<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_grey"
        android:gravity="center">

        <TextView
            android:id="@+id/number_of_try"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:text="@string/try_left"
            android:textColor="@color/dark_blue"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/number_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            android:maxLength="2"
            android:textAlignment="center"
            android:inputType="number"
            android:textColorHint="@color/dark_blue"
            android:hint="@string/hint_number"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/more_or_less"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:visibility="invisible"
            android:text="@string/more"
            android:textSize="40sp"
            android:textColor="@color/dark_blue" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/validate"
            android:background="@color/dark_blue"
            android:textColor="@color/white"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>